--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>حارس القلعة الحسابية | سلمان الجنيدي</title>
+    <title>حارس القلعة  | سلمان الجنيدي</title>
     
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -165,7 +165,7 @@
 <body>
 
     <div id="start-screen" class="screen">
-        <h1>حارس القلعة الحسابية</h1>
+        <h1>حارس القلعة  </h1>
         <div class="credits-box">
             <div class="credits-name">فكرة وتصميم: أ. سلمان الجنيدي</div>
             <div class="social-icons">
@@ -190,7 +190,7 @@
     </div>
 
     <div id="game-over-screen" class="screen hidden">
-        <h1 style="color: var(--accent-wrong);">سقطت القلعة!</h1>
+        <h1 style="color: var(--accent-wrong);">حظا أوفر</h1>
         <p style="font-size: 1.5rem;">جمعت: <span class="arabic-num" id="final-score">٠</span> نقطة</p>
         <button class="btn" onclick="resetGame()">لعب مرة أخرى</button>
         <button class="btn btn-blue" onclick="location.reload()">القائمة الرئيسية</button>
